fix: Search and filter hidden search button alignment and stacking order adjustment (#5339)
* Fix broken vertical alignment of search and filter search container & chips when the accessible search button is focused

* Fix the hidden search button being partially hidden by the search input

* make hidden search and filter submit button use dense styling

* vertically center s&f input field contents

* Introduce `.p-search-and-filter__search-button` class for the hidden search button

* move `u-off-screen` placeholder to `base_placeholders`

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -116,10 +116,27 @@
     }
 
     .p-search-and-filter__box {
+      align-items: center;
       display: inline-flex;
       flex: 1;
+      height: 100%;
       margin: 0;
       position: relative;
+    }
+
+    // tab-selectable search button
+    .p-search-and-filter__search-button {
+      // Hide the search button unless it is focused
+      @extend %u-off-screen;
+      // Prevents the bottom margin of the search button from growing the height of the search container
+      @extend %u-no-margin--bottom;
+      // Make the button dense to ensure it fits vertically in the search box
+      @extend %vf-button-dense-vertical-padding;
+
+      // Make sure the hidden search button appears on top of the input field
+      &:focus {
+        z-index: 1;
+      }
     }
 
     .p-search-and-filter__input {
